ProRob/log/build_2025-01-14_10-10-35/package_master/stderr.log
  File "/home/rouillon/ProRob/install/package_master/lib/python3.10/site-packages/package_master/client_member_function.py", line 32
    response = minimal_client.send_request(int(sys.argv[1]), int(sys.argv[2], int(sys.argv[2]))
                                          ^
SyntaxError: '(' was never closed

